[package]
name    = "uinput-tokio"
version = "0.1.36"
edition = "2018"

authors = ["ttzztztz <ttzztztz@outlook.com>"]
license = "WTFPL"

description = "Linux uinput wrapper."
repository  = "https://github.com/keyboard-mapping/uinput-tokio"
keywords    = ["linux", "input"]

[dependencies]
libc       = "0.2"
nix        = { version = "0.28", features = ["fs"] }
uinput-sys = "0.1"

custom_derive = "0.1"
enum_derive   = "0.1"

tokio = { version = "1.37.0", features = ["full"] }

[dependencies.libudev]
optional = true
version  = "0.3"

[features]
default = ["udev"]
udev    = ["libudev"]
